--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "14/1 City Game",
-  "name": "Application pour compter les points du 14/1",
+  "name": "14/1 City Game",
   "icons": [
     {
       "src": "14city.ico",
